--- a/Views/Kyc/Edit.cshtml
+++ b/Views/Kyc/Edit.cshtml
@@ -2,7 +2,7 @@
 @{
 ViewData["Title"] = "Edit KYC";
 }
-<form asp-action="Create" method="put">
+<form asp-action="Edit" method="post">
     @Html.AntiForgeryToken()
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
